# codex-forge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.sandbox  README.md  build.sh  plan.md  v3.md
.roles/: architect.toml  implementer.toml  reviewer.toml  sets.toml  tester.toml
.rules/: global.md  reviewer.md
docs/: release-checklist.md
scripts/: README.md  build_sandbox_image.sh  tui_smoke_real_pty.py
src/: app.rs  app_shell.rs  apply.rs  cli.rs  codex.rs  commander.rs  config.rs  doctor.rs  main.rs  memory.rs  model.rs  orchestrator.rs  replay.rs  repo.rs  resources.rs  roles.rs  session.rs  time.rs  tui.rs  ui.rs  verify.rs  workspace.rs  worktree.rs
src/app_shell/: commands.rs  detail.rs  edit.rs  flow.rs  input.rs  project.rs  render.rs  text.rs
src/cli/: mod.rs
src/commands/: approval.rs  artifact.rs  chat.rs  config.rs  entry.rs  format.rs  mod.rs  replay.rs  runs.rs  thread.rs
src/harness/: backend.rs  mod.rs  runtime.rs  sandbox.rs  skills.rs  store.rs  tools.rs  types.rs
src/harness/backend/: mod.rs  openai.rs  parser.rs  prompt.rs
src/harness/runtime/: autonomous.rs  chat.rs  engine.rs  mod.rs  subagent.rs
src/harness/store/: artifacts.rs  ids.rs  jsonl.rs  memory.rs  mod.rs  runs.rs  state.rs  threads.rs
src/harness/tools/: catalog.rs  executor.rs  fs_tools.rs  meta.rs  mod.rs  search.rs  shell.rs
src/tui/: app.rs  data.rs  input.rs  mod.rs  render.rs  tabs.rs
tests/: approval_and_artifact.rs  cli_harness_integration.rs  cli_integration.rs  config_and_alias.rs  thread_run_flow.rs
tests/support/: mod.rs
