[package]
name = "codex-forge"
version = "0.1.0"
edition = "2024"
description = "A thread/run based Codex harness CLI written in Rust"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
once_cell = "1.21"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
unicode-width = "0.2"
walkdir = "2.5"
which = "7.0"

[dev-dependencies]
tempfile = "3.20"
